plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.hibernate:hibernate-core:6.4.2.Final'
    implementation 'org.hibernate:hibernate-entitymanager:6.0.0.Alpha7'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.2' //BD
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'mysql:mysql-connector-java:8.0.15'
}

tasks.named('test') {
    useJUnitPlatform()
}
